hello_world/hello-world-ts/src/grammar/JsonParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { JsonListener } from "./JsonListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


import { JBool, JDict, JFlt, JInt, JList, JNull, JStr, Json_t, JsonPair_t, JsonPair, appendList, unesc, getStr, toFlt, toInt } from "./JsonConstructor"


export class JsonParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly T__4 = 5;
    public static readonly T__5 = 6;
    public static readonly T__6 = 7;
    public static readonly T__7 = 8;
    public static readonly T__8 = 9;
    public static readonly INT = 10;
    public static readonly FLOAT = 11;
    public static readonly STR = 12;
    public static readonly SPACE = 13;
    public static readonly RULE_start = 0;
    public static readonly RULE_start__y_ = 1;
    public static readonly RULE_jsonpair = 2;
    public static readonly RULE_seplist_o__i__s__i__s_json_p_ = 3;
    public static readonly RULE_seplist_o__i__s__i__s_jsonpair_p_ = 4;
    public static readonly RULE_json = 5;

    public static readonly literalNames = [
        null, "':'", "','", "'null'", "'['", "']'", "'{'", "'}'", "'true'", 
        "'false'"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, null, null, null, null, null, "INT", 
        "FLOAT", "STR", "SPACE"
    ];
    public static readonly ruleNames = [
        "start", "start__y_", "jsonpair", "seplist_o__i__s__i__s_json_p_", 
        "seplist_o__i__s__i__s_jsonpair_p_", "json",
    ];

    public get grammarFileName(): string { return "Json.g4"; }
    public get literalNames(): (string | null)[] { return JsonParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return JsonParser.symbolicNames; }
    public get ruleNames(): string[] { return JsonParser.ruleNames; }
    public get serializedATN(): number[] { return JsonParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, JsonParser._ATN, JsonParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public start(): StartContext {
        let localContext = new StartContext(this.context, this.state);
        this.enterRule(localContext, 0, JsonParser.RULE_start);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 12;
            localContext._v = this.start__y_();
            this.state = 13;
            this.match(JsonParser.EOF);
             localContext!.result = localContext._v.result; 
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public start__y_(): Start__y_Context {
        let localContext = new Start__y_Context(this.context, this.state);
        this.enterRule(localContext, 2, JsonParser.RULE_start__y_);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 16;
            localContext._start__y__0__1 = this.json();
             localContext!.result = localContext._start__y__0__1.result;
                        
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public jsonpair(): JsonpairContext {
        let localContext = new JsonpairContext(this.context, this.state);
        this.enterRule(localContext, 4, JsonParser.RULE_jsonpair);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 19;
            localContext._jsonpair_0__1 = this.match(JsonParser.STR);
            this.state = 20;
            this.match(JsonParser.T__0);
            this.state = 21;
            localContext._jsonpair_0__3 = this.json();
             localContext!.result = <JsonPair_t> JsonPair(<string> <string> unesc(<string> <string> getStr(<antlr.Token> localContext._jsonpair_0__1)), <Json_t> localContext._jsonpair_0__3.result);
                        
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public seplist_o__i__s__i__s_json_p_(): Seplist_o__i__s__i__s_json_p_Context;
    public seplist_o__i__s__i__s_json_p_(_p: number): Seplist_o__i__s__i__s_json_p_Context;
    public seplist_o__i__s__i__s_json_p_(_p?: number): Seplist_o__i__s__i__s_json_p_Context {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new Seplist_o__i__s__i__s_json_p_Context(this.context, parentState);
        let previousContext = localContext;
        let _startState = 6;
        this.enterRecursionRule(localContext, 6, JsonParser.RULE_seplist_o__i__s__i__s_json_p_, _p);
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            {
            this.state = 25;
            localContext._seplist_o__i__s__i__s_json_p__0__1 = this.json();
             localContext!.result = <Array<Json_t>>[ localContext._seplist_o__i__s__i__s_json_p__0__1.result ];
                        
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 35;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 0, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    {
                    localContext = new Seplist_o__i__s__i__s_json_p_Context(parentContext, parentState);
                    localContext._seplist_o__i__s__i__s_json_p__2__1 = previousContext;
                    this.pushNewRecursionContext(localContext, _startState, JsonParser.RULE_seplist_o__i__s__i__s_json_p_);
                    this.state = 28;
                    if (!(this.precpred(this.context, 1))) {
                        throw this.createFailedPredicateException("this.precpred(this.context, 1)");
                    }
                    this.state = 29;
                    this.match(JsonParser.T__1);
                    this.state = 30;
                    localContext._seplist_o__i__s__i__s_json_p__2__3 = this.json();
                     localContext!.result = <Array<Json_t>> appendList<Json_t>(<Array<Json_t>> localContext._seplist_o__i__s__i__s_json_p__2__1.result, <Json_t> localContext._seplist_o__i__s__i__s_json_p__2__3.result);
                                          
                    }
                    }
                }
                this.state = 37;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 0, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }

    public seplist_o__i__s__i__s_jsonpair_p_(): Seplist_o__i__s__i__s_jsonpair_p_Context;
    public seplist_o__i__s__i__s_jsonpair_p_(_p: number): Seplist_o__i__s__i__s_jsonpair_p_Context;
    public seplist_o__i__s__i__s_jsonpair_p_(_p?: number): Seplist_o__i__s__i__s_jsonpair_p_Context {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new Seplist_o__i__s__i__s_jsonpair_p_Context(this.context, parentState);
        let previousContext = localContext;
        let _startState = 8;
        this.enterRecursionRule(localContext, 8, JsonParser.RULE_seplist_o__i__s__i__s_jsonpair_p_, _p);
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            {
            this.state = 39;
            localContext._seplist_o__i__s__i__s_jsonpair_p__0__1 = this.jsonpair();
             localContext!.result = <Array<JsonPair_t>>[ localContext._seplist_o__i__s__i__s_jsonpair_p__0__1.result ];
                        
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 49;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 1, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    {
                    localContext = new Seplist_o__i__s__i__s_jsonpair_p_Context(parentContext, parentState);
                    localContext._seplist_o__i__s__i__s_jsonpair_p__2__1 = previousContext;
                    this.pushNewRecursionContext(localContext, _startState, JsonParser.RULE_seplist_o__i__s__i__s_jsonpair_p_);
                    this.state = 42;
                    if (!(this.precpred(this.context, 1))) {
                        throw this.createFailedPredicateException("this.precpred(this.context, 1)");
                    }
                    this.state = 43;
                    this.match(JsonParser.T__1);
                    this.state = 44;
                    localContext._seplist_o__i__s__i__s_jsonpair_p__2__3 = this.jsonpair();
                     localContext!.result = <Array<JsonPair_t>> appendList<JsonPair_t>(<Array<JsonPair_t>> localContext._seplist_o__i__s__i__s_jsonpair_p__2__1.result, <JsonPair_t> localContext._seplist_o__i__s__i__s_jsonpair_p__2__3.result);
                                          
                    }
                    }
                }
                this.state = 51;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 1, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }
    public json(): JsonContext {
        let localContext = new JsonContext(this.context, this.state);
        this.enterRule(localContext, 10, JsonParser.RULE_json);
        try {
            this.state = 80;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 2, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 52;
                localContext._json_0__1 = this.match(JsonParser.INT);
                 localContext!.result = <Json_t> JInt(<number> <number> toInt(<string> <string> getStr(<antlr.Token> localContext._json_0__1)));
                            
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 54;
                localContext._json_2__1 = this.match(JsonParser.FLOAT);
                 localContext!.result = <Json_t> JFlt(<number> <number> toFlt(<string> <string> getStr(<antlr.Token> localContext._json_2__1)));
                            
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 56;
                this.match(JsonParser.T__2);
                 localContext!.result = <Json_t> JNull();
                            
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 58;
                localContext._json_6__1 = this.match(JsonParser.STR);
                 localContext!.result = <Json_t> JStr(<string> <string> unesc(<string> <string> getStr(<antlr.Token> localContext._json_6__1)));
                            
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 60;
                this.match(JsonParser.T__3);
                this.state = 61;
                this.match(JsonParser.T__4);
                 localContext!.result = <Json_t> JList(<Array<Json_t>> <Array<Json_t>>[  ]);
                            
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 63;
                this.match(JsonParser.T__5);
                this.state = 64;
                this.match(JsonParser.T__6);
                 localContext!.result = <Json_t> JDict(<Array<JsonPair_t>> <Array<JsonPair_t>>[  ]);
                            
                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 66;
                this.match(JsonParser.T__7);
                 localContext!.result = <Json_t> JBool(<boolean> true);
                            
                }
                break;
            case 8:
                this.enterOuterAlt(localContext, 8);
                {
                this.state = 68;
                this.match(JsonParser.T__8);
                 localContext!.result = <Json_t> JBool(<boolean> false);
                            
                }
                break;
            case 9:
                this.enterOuterAlt(localContext, 9);
                {
                this.state = 70;
                this.match(JsonParser.T__3);
                this.state = 71;
                localContext._json_16__2 = this.seplist_o__i__s__i__s_json_p_(0);
                this.state = 72;
                this.match(JsonParser.T__4);
                 localContext!.result = <Json_t> JList(<Array<Json_t>> localContext._json_16__2.result);
                            
                }
                break;
            case 10:
                this.enterOuterAlt(localContext, 10);
                {
                this.state = 75;
                this.match(JsonParser.T__5);
                this.state = 76;
                localContext._json_18__2 = this.seplist_o__i__s__i__s_jsonpair_p_(0);
                this.state = 77;
                this.match(JsonParser.T__6);
                 localContext!.result = <Json_t> JDict(<Array<JsonPair_t>> localContext._json_18__2.result);
                            
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public override sempred(localContext: antlr.ParserRuleContext | null, ruleIndex: number, predIndex: number): boolean {
        switch (ruleIndex) {
        case 3:
            return this.seplist_o__i__s__i__s_json_p__sempred(localContext as Seplist_o__i__s__i__s_json_p_Context, predIndex);
        case 4:
            return this.seplist_o__i__s__i__s_jsonpair_p__sempred(localContext as Seplist_o__i__s__i__s_jsonpair_p_Context, predIndex);
        }
        return true;
    }
    private seplist_o__i__s__i__s_json_p__sempred(localContext: Seplist_o__i__s__i__s_json_p_Context | null, predIndex: number): boolean {
        switch (predIndex) {
        case 0:
            return this.precpred(this.context, 1);
        }
        return true;
    }
    private seplist_o__i__s__i__s_jsonpair_p__sempred(localContext: Seplist_o__i__s__i__s_jsonpair_p_Context | null, predIndex: number): boolean {
        switch (predIndex) {
        case 1:
            return this.precpred(this.context, 1);
        }
        return true;
    }


    private static __ATN: antlr.ATN;
    public static get _ATN(): antlr.ATN {
        if (!JsonParser.__ATN) {
            JsonParser.__ATN = new antlr.ATNDeserializer().deserialize(JsonParser._serializedATN);
        }

        return JsonParser.__ATN;
    }


    private static readonly vocabulary = new antlr.Vocabulary(JsonParser.literalNames, JsonParser.symbolicNames, []);

    public override get vocabulary(): antlr.Vocabulary {
        return JsonParser.vocabulary;
    }

    private static readonly decisionsToDFA = JsonParser._ATN.decisionToState.map( (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index) );
}

export class StartContext extends antlr.ParserRuleContext {
    public result: Json_t;
    public _v?: Start__y_Context;
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public EOF(): antlr.TerminalNode {
        return this.getToken(JsonParser.EOF, 0)!;
    }
    public start__y_(): Start__y_Context {
        return this.getRuleContext(0, Start__y_Context)!;
    }
    public override get ruleIndex(): number {
        return JsonParser.RULE_start;
    }
    public override enterRule(listener: JsonListener): void {
        if(listener.enterStart) {
             listener.enterStart(this);
        }
    }
    public override exitRule(listener: JsonListener): void {
        if(listener.exitStart) {
             listener.exitStart(this);
        }
    }
}


export class Start__y_Context extends antlr.ParserRuleContext {
    public result: Json_t;
    public _start__y__0__1?: JsonContext;
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public json(): JsonContext {
        return this.getRuleContext(0, JsonContext)!;
    }
    public override get ruleIndex(): number {
        return JsonParser.RULE_start__y_;
    }
    public override enterRule(listener: JsonListener): void {
        if(listener.enterStart__y_) {
             listener.enterStart__y_(this);
        }
    }
    public override exitRule(listener: JsonListener): void {
        if(listener.exitStart__y_) {
             listener.exitStart__y_(this);
        }
    }
}


export class JsonpairContext extends antlr.ParserRuleContext {
    public result: JsonPair_t;
    public _jsonpair_0__1?: Token | null;
    public _jsonpair_0__3?: JsonContext;
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public STR(): antlr.TerminalNode {
        return this.getToken(JsonParser.STR, 0)!;
    }
    public json(): JsonContext {
        return this.getRuleContext(0, JsonContext)!;
    }
    public override get ruleIndex(): number {
        return JsonParser.RULE_jsonpair;
    }
    public override enterRule(listener: JsonListener): void {
        if(listener.enterJsonpair) {
             listener.enterJsonpair(this);
        }
    }
    public override exitRule(listener: JsonListener): void {
        if(listener.exitJsonpair) {
             listener.exitJsonpair(this);
        }
    }
}


export class Seplist_o__i__s__i__s_json_p_Context extends antlr.ParserRuleContext {
    public result: Array<Json_t>;
    public _seplist_o__i__s__i__s_json_p__2__1?: Seplist_o__i__s__i__s_json_p_Context;
    public _seplist_o__i__s__i__s_json_p__0__1?: JsonContext;
    public _seplist_o__i__s__i__s_json_p__2__3?: JsonContext;
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public json(): JsonContext {
        return this.getRuleContext(0, JsonContext)!;
    }
    public seplist_o__i__s__i__s_json_p_(): Seplist_o__i__s__i__s_json_p_Context | null {
        return this.getRuleContext(0, Seplist_o__i__s__i__s_json_p_Context);
    }
    public override get ruleIndex(): number {
        return JsonParser.RULE_seplist_o__i__s__i__s_json_p_;
    }
    public override enterRule(listener: JsonListener): void {
        if(listener.enterSeplist_o__i__s__i__s_json_p_) {
             listener.enterSeplist_o__i__s__i__s_json_p_(this);
        }
    }
    public override exitRule(listener: JsonListener): void {
        if(listener.exitSeplist_o__i__s__i__s_json_p_) {
             listener.exitSeplist_o__i__s__i__s_json_p_(this);
        }
    }
}


export class Seplist_o__i__s__i__s_jsonpair_p_Context extends antlr.ParserRuleContext {
    public result: Array<JsonPair_t>;
    public _seplist_o__i__s__i__s_jsonpair_p__2__1?: Seplist_o__i__s__i__s_jsonpair_p_Context;
    public _seplist_o__i__s__i__s_jsonpair_p__0__1?: JsonpairContext;
    public _seplist_o__i__s__i__s_jsonpair_p__2__3?: JsonpairContext;
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public jsonpair(): JsonpairContext {
        return this.getRuleContext(0, JsonpairContext)!;
    }
    public seplist_o__i__s__i__s_jsonpair_p_(): Seplist_o__i__s__i__s_jsonpair_p_Context | null {
        return this.getRuleContext(0, Seplist_o__i__s__i__s_jsonpair_p_Context);
    }
    public override get ruleIndex(): number {
        return JsonParser.RULE_seplist_o__i__s__i__s_jsonpair_p_;
    }
    public override enterRule(listener: JsonListener): void {
        if(listener.enterSeplist_o__i__s__i__s_jsonpair_p_) {
             listener.enterSeplist_o__i__s__i__s_jsonpair_p_(this);
        }
    }
    public override exitRule(listener: JsonListener): void {
        if(listener.exitSeplist_o__i__s__i__s_jsonpair_p_) {
             listener.exitSeplist_o__i__s__i__s_jsonpair_p_(this);
        }
    }
}


export class JsonContext extends antlr.ParserRuleContext {
    public result: Json_t;
    public _json_0__1?: Token | null;
    public _json_2__1?: Token | null;
    public _json_6__1?: Token | null;
    public _json_16__2?: Seplist_o__i__s__i__s_json_p_Context;
    public _json_18__2?: Seplist_o__i__s__i__s_jsonpair_p_Context;
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public INT(): antlr.TerminalNode | null {
        return this.getToken(JsonParser.INT, 0);
    }
    public FLOAT(): antlr.TerminalNode | null {
        return this.getToken(JsonParser.FLOAT, 0);
    }
    public STR(): antlr.TerminalNode | null {
        return this.getToken(JsonParser.STR, 0);
    }
    public seplist_o__i__s__i__s_json_p_(): Seplist_o__i__s__i__s_json_p_Context | null {
        return this.getRuleContext(0, Seplist_o__i__s__i__s_json_p_Context);
    }
    public seplist_o__i__s__i__s_jsonpair_p_(): Seplist_o__i__s__i__s_jsonpair_p_Context | null {
        return this.getRuleContext(0, Seplist_o__i__s__i__s_jsonpair_p_Context);
    }
    public override get ruleIndex(): number {
        return JsonParser.RULE_json;
    }
    public override enterRule(listener: JsonListener): void {
        if(listener.enterJson) {
             listener.enterJson(this);
        }
    }
    public override exitRule(listener: JsonListener): void {
        if(listener.exitJson) {
             listener.exitJson(this);
        }
    }
}
